@@ -919,7 +919,8 @@ sub start_upgrade {
         $upgrade_ends = $now;
     }
 
-    $upgrade_ends->add(seconds=>$cost->{time});
+    my $time_to_add = $body->isa('Lacuna::DB::Result::Map::Body::Planet::Station') ? 60 * 60 * 72 : $cost->{time};
+    $upgrade_ends->add(seconds=>$time_to_add);
     # add to queue
     $self->update({
         is_upgrading    => 1,
@@ -974,8 +975,19 @@ sub finish_upgrade {
         $body->needs_recalc(1);
         $body->needs_surface_refresh(1);
         $body->update;
-
+        
+        my $empire = $body->empire; 
+        $empire->add_medal('building'.$self->level);
+        my $type = $self->controller_class;
+        $type =~ s/^Lacuna::RPC::Building::(\w+)$/$1/;
+        $empire->add_medal($type);
+        if ($self->level % 5 == 0) {
+            my %levels = (5=>'a quiet',10=>'an extravagant',15=>'a lavish',20=>'a magnificent',25=>'a historic',30=>'a magical');
+            $self->body->add_news($self->level*4,"In %s ceremony, %s unveiled its newly augmented %s.", $levels{$self->level}, $empire->name, $self->name);
+        }
+        $self->reschedule_queue;
     }
+    
     Lacuna->cache->delete('upgrade_contention_lock', $self->id);
 
     return $self;
@@ -990,14 +1002,14 @@ sub finish_upgrade_news
     }
 }
 
-# Cancel the upgrade of any one build on the build queue
+# Cancel the upgrade of any any one build on the build queue
 #
 sub cancel_upgrade {
     my ($self) = @_;
 
     if ($self->is_upgrading) {
         $self->reschedule_queue;
-        if ($self->level < 1) {
+        if ($self->level <= 1) {
             $self->delete;
         }
         else {
@@ -1010,54 +1022,53 @@ sub cancel_upgrade {
     return $self;
 }
 
-# Remove one building from the queue, reschedule all other following buildings
-#
 sub reschedule_queue {
     my ($self) = @_;
 
-    my $start_time = DateTime->now;
+    my $start_time  = DateTime->now;
     my $end_time;
     my @build_queue = @{$self->body->builds};
-    my $build;
     BUILD:
+    my $build;
     while ($build = shift @build_queue) {
-        $end_time = $build->upgrade_ends;
         if ($build->id == $self->id) {
+            $end_time   = $build->upgrade_ends;
             last BUILD;
         }
         # Start time of the next build is the end time of this one
-        $start_time = $end_time;
+        $start_time = $build->upgrade_ends;
     }
     if ($build) {
         # Remove this scheduled event
         my $duration = $end_time->epoch - $start_time->epoch;
-        # Don't bother to reschedule if it is a small period
-        if ($duration > 5) {
+        my ($schedule) = Lacuna->db->resultset('Schedule')->search({
+            parent_table    => 'Building',
+            parent_id       => $self->id,
+            task            => 'finish_upgrade',
+        });
+        $schedule->delete if defined $schedule;
+
+        # Change the scheduled time for all subsequent builds (if any)
+        while (my $build = shift @build_queue) {
             my ($schedule) = Lacuna->db->resultset('Schedule')->search({
                 parent_table    => 'Building',
                 parent_id       => $self->id,
                 task            => 'finish_upgrade',
             });
             $schedule->delete if defined $schedule;
-    
-            # Change the scheduled time for all subsequent builds (if any)
-            while (my $build = shift @build_queue) {
-    
-                my $upgrade_ends = $build->upgrade_ends->clone->subtract(seconds => $duration);
-                $build->upgrade_ends($upgrade_ends);
-                $build->update;
-            
-                Lacuna->db->resultset('Schedule')->reschedule({
-                    parent_table    => 'Building',
-                    parent_id       => $build->id,
-                    task            => 'finish_upgrade',
-                    delivery        => $upgrade_ends,
-                });
-            }
+            my $upgrade_ends = $build->upgrade_ends->subtract(seconds => $duration);
+            $build->upgrade_ends($upgrade_ends);
+            $build->update;
+
+            $schedule = Lacuna->db->resultset('Schedule')->create({
+                delivery        => $upgrade_ends,
+                parent_table    => 'Building',
+                parent_id       => $build->id,
+                task            => 'finish_upgrade',
+            });
         }
     }
 }
-
 
 # WORK
 
