@@ -520,10 +520,12 @@
  - Fix: Stars now list in alphabetic order in Parliament, rename stars.
  - Mod: Supply chains can now be set up to allied planets
  - Mod: Fleets on defence no longer have a reset after a battle.
+ - Add: Ability to subsidize individual builds on the build queue
+ - Add: Ability to cancel individual builds on the build queue
 
  - TEST: view_incoming_fleet: for visibility of foreign fleets.
  - TODO: view_ships_orbiting seems to be redundant
-
+ - TODO: Ability to subsidize individual builds on the ship build queue
  - TODO: Ability to 'delay' a fleet that is already in flight.
  - TODO: Display the owner,body of orbiting/defending fleets
  - TODO: Retrieve spies, should be able to specify 'own colony' spies, not retriev all 'own empire' spies
